[project]
name = "fbe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "sse-starlette>=3.3.2",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]
